<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/favoriteFragment"
        android:enabled="true"
        android:icon="@drawable/ic_star_white"
        android:title="@string/favorite"/>

    <item
        android:id="@+id/cameraFragment"
        android:enabled="true"
        android:icon="@drawable/ic_camera"
        android:title="@string/camera" />

    <item
        android:id="@+id/searchByTextFragment"
        android:enabled="true"
        android:icon="@drawable/ic_search_white"
        android:title="@string/search"/>

    <item
        android:id="@+id/historicFragment"
        android:enabled="true"
        android:icon="@drawable/ic_history_white"
        android:title="@string/historic"/>
</menu>