<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SearchByTextFragment">

    <ImageView
        android:id="@+id/imgSearch"
        android:layout_width="281dp"
        android:layout_height="204dp"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="65dp"
        android:layout_marginRight="65dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader"
        app:srcCompat="@drawable/ic_cuate" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="415dp"
        android:layout_height="152dp"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:background="@drawable/nav_container"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgHandbagT"
            android:layout_width="40dp"
            android:layout_height="47dp"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_handbag_search" />

        <TextView
            android:id="@+id/textSearch"
            android:layout_width="236dp"
            android:layout_height="64dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/searchText"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imgHandbagT"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageButton
            android:id="@+id/btnSettings"
            android:layout_width="40dp"
            android:layout_height="44dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:adjustViewBounds="true"
            android:background="#00FFFFFF"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_settings" />

        <Button
            android:id="@+id/btnMarca"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_marginStart="52dp"
            android:layout_marginLeft="52dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="26dp"
            android:layout_marginRight="26dp"
            android:background="@drawable/ic_custom_button"
            android:fontFamily="@font/roboto"
            android:text="@string/brand"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnSite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textSearch"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btnSite"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_marginTop="52dp"
            android:background="@drawable/ic_custom_button"
            android:fontFamily="@font/roboto"
            android:text="@string/site"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textSearch"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btnPrice"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="52dp"
            android:layout_marginRight="52dp"
            android:background="@drawable/ic_custom_button"
            android:fontFamily="@font/roboto"
            android:text="@string/price"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/btnSite"
            app:layout_constraintTop_toBottomOf="@+id/textSearch"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textResult"
        android:layout_width="322dp"
        android:layout_height="103dp"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/result"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>