<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tutorial"
    tools:context=".TutorialThreeFragment">

    <ImageView
        android:id="@+id/imgTutorial"
        android:layout_width="420dp"
        android:layout_height="255dp"
        android:layout_marginTop="171dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_tutorial_three" />

    <TextView
        android:id="@+id/textTutorial"
        android:layout_width="324dp"
        android:layout_height="134dp"
        android:layout_marginTop="20dp"
        android:width="273dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/tutorial3"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgTutorial" />

    <ImageButton
        android:id="@+id/btnAdvance"
        android:layout_width="87dp"
        android:layout_height="47dp"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="171dp"
        android:layout_marginEnd="408dp"
        android:layout_marginRight="408dp"
        android:layout_marginBottom="29dp"
        android:adjustViewBounds="true"
        android:background="#00FFFFFF"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTutorial"
        app:layout_constraintVertical_bias="0.76"
        app:srcCompat="@drawable/ic_left_arrow" />

    <ImageView
        android:id="@+id/imgPointTutorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="185dp"
        android:layout_marginLeft="185dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="152dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgPointTutorial2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTutorial"
        app:srcCompat="@drawable/ic_point_white" />

    <ImageView
        android:id="@+id/imgPointTutorial2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:layout_marginBottom="152dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgPointTutorial3"
        app:layout_constraintStart_toEndOf="@+id/imgPointTutorial"
        app:layout_constraintTop_toBottomOf="@+id/textTutorial"
        app:srcCompat="@drawable/ic_point_white" />

    <ImageView
        android:id="@+id/imgPointTutorial3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="173dp"
        android:layout_marginRight="173dp"
        android:layout_marginBottom="152dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgPointTutorial2"
        app:layout_constraintTop_toBottomOf="@+id/textTutorial"
        app:srcCompat="@drawable/ic_point_black" />

    <Button
        android:id="@+id/btnJump"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="279dp"
        android:layout_marginLeft="279dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="29dp"
        android:background="#00FFFFFF"
        android:shadowColor="#FFFFFF"
        android:text="@string/btnRun"
        android:textColor="@color/btnFont"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnAdvance"
        app:layout_constraintTop_toBottomOf="@+id/textTutorial"
        app:layout_constraintVertical_bias="0.75" />
</androidx.constraintlayout.widget.ConstraintLayout>